# divergence-explorer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  program.md  pyproject.toml  run_batch.sh
analysis/: dashboard.py  generate_viz.py
deploy/: divergence-explorer.service  divergence-explorer.timer
src/: config.py  explorer.py  hypothesis.py  inference.py  models.py  scoring.py
